layout of the sideBar set > > The sidebar will serve as a small menu in which the user can navigate their account

--- a/index.html
+++ b/index.html
@@ -9,11 +9,60 @@
 <body>
    <div class="container">
         <div class="header">
-            <img src="./adminPageAssets/pexels-goksutaymaz-23657500.jpg" alt="Dark image of goksutaymaz looking off in the distance">
-            <h1>Welcome back, William!</h1>
-            <p>You have 2 new messages and 15 new tasks</p>
+            <div class="profile">
+                <img src="./adminPageAssets/pexels-goksutaymaz-23657500.jpg" alt="Dark image of goksutaymaz looking off in the distance">
+                <div class="welcome">
+                    <h1>Welcome back, William!</h1>
+                        <div class="notifications">
+                            <img src="./adminPageAssets/bell.svg" alt="bell symbol">
+                            <p>You have 2 new messages and 15 new tasks</p>
+                        </div>
+                </div>
+            </div>
+            <div class="buttons">
+                <div class="messages">
+                    <img src="./adminPageAssets/message-text.svg" src="envelope">
+                    <p>messages</p>
+                </div>
+                <div class= "upload">
+                    <img src="./adminPageAssets/upload-box-outline.svg" src="arrow pointing up">
+                    <p>upload</p>
+                </div>
+            </div>
         </div>
-        <div class="sideBar">sideBar</div>
+        <div class="sideBar">
+            <div class="dashHome">
+                <h1>Dashboard</h1>
+                <img src="./adminPageAssets/pexels-goksutaymaz-23657500.jpg" alt="Dark image of goksutaymaz looking off in the distance">
+                
+            </div>
+            <ul class="links">
+                <li>
+                    <a><img src="./adminPageAssets/home.svg">Home</a>
+                </li>
+                <li>
+                    <a><img src="./adminPageAssets/account-box.svg">Profile</a>
+                </li>
+                <li>
+                    <a><img src="./adminPageAssets/google-analytics.svg">Analytics</a>
+                </li>
+                <li>
+                    <a><img src="./adminPageAssets/home.svg">History</a>
+                </li>
+                <li>
+                    <a><img src="./adminPageAssets/calendar-check-outline.svg">Tasks</a>
+                </li>
+                <li>
+                    <a><img src="./adminPageAssets/account-group.svg">Communities</a>
+                </li>
+            </ul>
+
+        </div>
+           
+
+
+
+
         <div class="article">Article</div>
         <div class="nav">Nav</div>
 
